# cheap

./: .gitignore  README  cheap.cabal  cheap.hs  parsec-prog.cabal  t.sh  v1.hs
