Name:                cheap
Version:             0.1
Synopsis:            Generate header and implementation C files from a single file
License:             AllRightsReserved
License-file:        LICENSE
Author:              Axel Tetzlaff
Maintainer:          axel.tetzlaff@fortytools.com
Category:            Application
Build-type:          Simple

Cabal-version:       >=1.2

Executable cheap
  Main-is:           cheap.hs

  Build-depends:   haskell2010 >= 1.0 && < 2.0

                  , parsec >= 3.1.1 && < 3.2

  GHC-Options:      -package parsec

