Name:                parsec-proc
Version:             0.1
Synopsis:            Imports various formats of betting events.
License:             AllRightsReserved
License-file:        LICENSE
Author:              Timo B. Hübel, Axel Tetzlaff
Maintainer:          timo.huebel@fortytools.com
Category:            Library
Build-type:          Simple

Cabal-version:       >=1.2

Executable daemon
  Main-is:           v1.hs

  Build-depends:   haskell2010 >= 1.0 && < 2.0

                  , parsec >= 3.1.1 && < 3.2

  GHC-Options:      -package parsec

